--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About page</title>
+    <title>About us</title>
 </head>
 <body>
-    <h1>Aoubt page</h1>
+    <h1>Aoubt us</h1>
 </body>
 </html>
